--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,6 +2,10 @@
   hosts: all
   become: true
   tasks:
+  - name: Update repository index
+    yum:
+      update_cache: yes
+
   - name: Install Apache
     yum:
       name: httpd
