--- a/install_cockpit.yml
+++ b/install_cockpit.yml
@@ -2,6 +2,10 @@
   hosts: all
   become: true
   tasks:
+  - name: Update repository index
+    yum:
+      update_cache: yes
+
   - name: Install Cockpit
     yum:
       name: cockpit
