Experiment with 'When' condition

--- a/install_cockpit.yml
+++ b/install_cockpit.yml
@@ -5,6 +5,7 @@
   - name: Update repository index
     yum:
       update_cache: yes
+    when: ansible_distribution == "CentOS"
 
   - name: Install Cockpit
     yum:
