--- a/install_apache.yml
+++ b/install_apache.yml
@@ -6,16 +6,12 @@
     yum:
       update_cache: yes
 
-  - name: Install Apache
-    yum:
-      name: httpd
-      state: present
-
-  - name: Install PHP and PHP modules
+  - name: Install Apache, PHP and its' modules
     yum:
       name:
       - php
       - php-mysql
+      - httpd
       state: present
 
   - name: Add Apache service to firewall
