--- a/install_cockpit.yml
+++ b/install_cockpit.yml
@@ -1,14 +1,13 @@
 - name: Install and configure Cockpit for CentOS 7
-  hosts: all
+  hosts: CentOS
   become: true
   tasks:
   - name: Update repository index
-    yum:
+    package:
       update_cache: yes
-    when: ansible_distribution == "CentOS"
 
   - name: Install Cockpit
-    yum:
+    package:
       name: cockpit
       state: present
 
