Support for changing file contents and notes update

--- a/push_file_to_server.yml
+++ b/push_file_to_server.yml
@@ -9,3 +9,9 @@
       owner: root
       group: root
       mode: 0644
+
+  - name: Change the text
+    replace:
+      path: /var/www/html/push_me.txt
+      regexp: "Pushed file."
+      replace: "Ansible is fun!"
